# gcp

./: .codecov.yml  README.md  docs.md  fpm.toml  meson.build
.github/workflows/: build.yml
app/: main.f90  meson.build
config/: meson.build
include/: gcp.h
man/: mctc-gcp.1.adoc
old/: main.f90  meson.build
src/: gcp.f90  gcp_precision.f90  gcp_strings.f90  gcp_version.f90  meson.build  precision.f90
subprojects/: mstore.wrap
test/: main.f90  meson.build  test_gcp.f90  test_gcp_3c_methods.f90  test_gcp_dft_methods.f90  test_gcp_gradient.f90  test_gcp_hf_methods.f90  test_gcp_pbc.f90  testsuite_structures.f90
test/c_api/: .CP  .CPC  test_gcp_cxx_api.cpp
