# This file is part of mctc-gcp.
# SPDX-Identifier: LGPL-3.0-or-later
#
# mctc-gcp is free software: you can redistribute it and/or modify it under
# the terms of the Lesser GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# mctc-gcp is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# Lesser GNU General Public License for more details.
#
# You should have received a copy of the Lesser GNU General Public License
# along with mctc-gcp.  If not, see <https://www.gnu.org/licenses/>.

gcp_exe = executable(
  meson.project_name(),
  sources: files('main.f90'),
  dependencies: gcp_dep,
  install: install,
)
